--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-# Set your workflow to run every day of the week from Monday to Friday at 2:00 UTC
+# Thiết lập quy trình làm việc chạy hàng ngày từ thứ 2 đến thứ 6 lúc 2:00 UTC
 on:
   schedule:
   - cron: "0 2 * * 1-5"
